--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Learning Git And GitHub</h1>
     <h1>Hello, World!</h1>
     <p>This is an example paragraph.</p>
+    <a href="index1.html">This is 2 page</a>
 </body>
 </html>
