--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Learning Git And GitHub</h1>
     <h1>Hello, World!</h1>
     <p>This is an example paragraph.</p>
-    <a href="index1.html">This is 2 page</a>
+    <a href="index1.html">This is 2 page</a>c
     <h2>This is my new feature</h2>
 </body>
 </html>
