--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Hello, World!</h1>
     <p>This is an example paragraph.</p>
     <a href="index1.html">This is 2 page</a>
-    <h2>This is my new feature</h2>
+    <h2>This is my new feature(button)</h2>
 </body>
 </html>
