--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <a href="index1.html">This is 2 page</a>
     <h2>This is my new feature(button)</h2>
-
+    <script src="index.js"></script>
+    <script src="util.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
